# cs6120-llvm-pass-skeleton

./: CMakeLists.txt  something.c
skeleton/: Skeleton.cpp
