cmake_minimum_required(VERSION 3.12)
project(Skeleton)

# LLVM uses C++17.
set(CMAKE_CXX_STANDARD 17)

# Load LLVMConfig.cmake. If this fails, consider setting `LLVM_DIR` to point
# to your LLVM installation's `lib/cmake/llvm` directory.
find_package(LLVM REQUIRED CONFIG)

# Include the part of LLVM's CMake libraries that defines
# `add_llvm_pass_plugin`.
include(AddLLVM)

# Use LLVM's preprocessor definitions, include directories, and library search
# paths.
add_definitions(${LLVM_DEFINITIONS})
include_directories(/usr/lib/llvm-18/)
link_directories(/usr/lib/llvm-18/lib/)

# Our pass lives in this subdirectory.
add_subdirectory(skeleton)
